// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box should allow the columns to be configured by different breakpoints 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-phone"
  data-testid="box"
  style=""
>
  Content
</div>
`;

exports[`Box should allow the columns to be configured by different breakpoints 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-phone rmd-box--grid-phone-size rmd-box--grid-tablet rmd-box--grid-desktop"
  data-testid="box"
  style="--rmd-box-phone-columns: 1;"
>
  Content
</div>
`;

exports[`Box should allow the columns to be configured by different breakpoints 3`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-tablet rmd-box--grid-tablet-size rmd-box--grid-desktop rmd-box--grid-desktop-size rmd-box--grid-large-desktop"
  data-testid="box"
  style="--rmd-box-tablet-columns: 2; --rmd-box-desktop-columns: 4;"
>
  Content
</div>
`;

exports[`Box should allow the grid item size to be configured by different breakpoints 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid"
  data-testid="box"
  style="--rmd-box-item-min-size: 4rem;"
>
  Content
</div>
`;

exports[`Box should allow the grid item size to be configured by different breakpoints 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-phone rmd-box--grid-phone-size"
  data-testid="box"
  style="--rmd-box-phone-item-min-size: 4rem;"
>
  Content
</div>
`;

exports[`Box should allow the grid item size to be configured by different breakpoints 3`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-phone rmd-box--grid-phone-size rmd-box--grid-tablet rmd-box--grid-tablet-size rmd-box--grid-desktop rmd-box--grid-desktop-size"
  data-testid="box"
  style="--rmd-box-phone-item-min-size: 4rem; --rmd-box-tablet-item-min-size: 8rem; --rmd-box-desktop-item-min-size: 12rem;"
>
  Content
</div>
`;

exports[`Box should allow the grid item size to be configured by different breakpoints 4`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-tablet rmd-box--grid-tablet-size rmd-box--grid-desktop rmd-box--grid-desktop-size rmd-box--grid-large-desktop rmd-box--grid-large-desktop-size"
  data-testid="box"
  style="--rmd-box-tablet-item-min-size: 5rem; --rmd-box-desktop-item-min-size: 12rem; --rmd-box-large-desktop-item-min-size: auto;"
>
  Content
</div>
`;

exports[`Box should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded custom-class-name"
  data-testid="box"
  style="color: white;"
>
  Content
</div>
`;

exports[`Box should be able to render as a grid using the grid prop 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should be able to support the grid-auto-rows behavior 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should be able to support the grid-auto-rows behavior 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should be able to support the grid-auto-rows behavior 3`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-auto-rows"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should set the --rmd-box-columns variable and grid-columsn class when gridColumns is a number 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should set the --rmd-box-columns variable and grid-columsn class when gridColumns is a number 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-size"
  data-testid="box"
  style="--rmd-box-columns: 4;"
>
  Content
</div>
`;

exports[`Box should set the --rmd-box-columns variable and grid-columsn class when gridColumns is a number 3`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--grid rmd-box--grid-size"
  data-testid="box"
  style="--rmd-box-columns: 4; color: red;"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 1`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 2`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 3`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-center"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 4`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 5`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 6`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-stretch"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 7`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-between"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 8`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-around"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 9`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-evenly"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 10`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 11`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 12`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-center"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 13`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 14`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 15`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-stretch"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 16`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-between"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 17`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-around"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 18`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-start rmd-box--justify-evenly"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 19`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 20`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 21`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-center"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 22`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 23`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 24`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-stretch"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 25`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-between"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 26`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-around"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 27`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-center rmd-box--justify-evenly"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 28`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 29`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 30`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-center"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 31`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 32`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 33`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-stretch"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 34`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-between"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 35`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-around"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 36`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-evenly"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 37`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 38`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 39`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-center"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 40`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 41`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 42`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-stretch"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 43`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-between"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 44`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-around"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 45`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-end rmd-box--justify-evenly"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 46`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 47`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-start"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 48`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-center"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 49`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 50`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-end"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 51`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-stretch"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 52`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-between"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 53`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-around"
  data-testid="box"
>
  Content
</div>
`;

exports[`Box should support common flex behavior 54`] = `
<div
  class="rmd-box rmd-box--gap rmd-box--wrap rmd-box--padded rmd-box--align-stretch rmd-box--justify-evenly"
  data-testid="box"
>
  Content
</div>
`;
